tests/errors/duplicate_footprint.nm
component Foo {
    footprint = "asdf";
    footprint = "fdsa";
}